--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@babel/polyfill": "^7.2.5",
     "@sentry/node": "^5.23.0",
     "@slack/client": "^5.0.2",
+    "@types/jest": "^26.0.14",
+    "@types/lodash": "^4.14.161",
+    "awesome-typescript-loader": "^5.2.1",
     "bcrypt": "^5.0.0",
     "bluebird": "^3.7.2",
     "cookie-parser": "~1.4.3",
@@ -30,6 +33,8 @@
     "random-string": "^0.2.0",
     "redis": "^3.0.2",
     "sequelize": "^4.44.4",
+    "source-map-loader": "^1.1.0",
+    "typescript": "^4.0.2",
     "uuid4": "^2.0.2",
     "winston": "^3.3.3"
   },
