변경된 sequelize config 파일로 참조하게 수정 sequelize.js => sequelize.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
-    "compilerOptions": {
-        "allowJs": true,
-        "target": "es5"
-    },
-    "include": [
-        ".restapi/**/*"
-    ]
+	"compilerOptions": {
+		"allowJs": true,
+		"target": "es5",
+		"outDir": "build/main"
+	},
+	"include": ["**/*.ts"],
+	"exclude": ["node_modules/**"]
 }
