--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,10 @@
 		"target": "es5",
 		"outDir": "build/main"
 	},
-	"include": ["**/*.ts"],
-	"exclude": ["node_modules/**"]
+	"include": [
+		"**/*.ts"
+	],
+	"exclude": [
+		"node_modules/**"
+	]
 }
