--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
-		"start": "run-s build && node build/main/index.ts",
+		"start": "run-s build && node build/main/index.js",
 		"test": "NODE_ENV=test npm run migrate:reset && NODE_ENV=test npm run migrate && NODE_ENV=test ./node_modules/.bin/jest tests",
 		"dev": "tsc-watch --onSuccess \" node build/main/index.ts\" ",
 		"build": "run-s clean && tsc -p tsconfig.json",
@@ -35,8 +35,10 @@
 		"pg-hstore": "^2.3.3",
 		"random-string": "^0.2.0",
 		"redis": "^3.0.2",
+		"run": "^1.4.0",
 		"sequelize": "^4.44.4",
 		"source-map-loader": "^1.1.0",
+		"trash": "^6.1.1",
 		"typescript": "^4.0.2",
 		"uuid4": "^2.0.2",
 		"winston": "^3.3.3"
