--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
-		"start": "run-s build && node build/main/index.js",
+		"start": "run-s build && node build/main/bin/www",
 		"test": "NODE_ENV=test npm run migrate:reset && NODE_ENV=test npm run migrate && NODE_ENV=test ./node_modules/.bin/jest tests",
-		"dev": "tsc-watch --onSuccess \" node build/main/index.ts\" ",
+		"dev": "tsc-watch --onSuccess \" node build/main/index.js\" ",
 		"build": "run-s clean && tsc -p tsconfig.json",
 		"clean": "trash build",
 		"migrate": "sequelize db:migrate",
