--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"start": "run-s build && node build/main/bin/www",
-		"test": "NODE_ENV=test npm run migrate:reset && NODE_ENV=test npm run migrate && NODE_ENV=test ./node_modules/.bin/jest tests",
+		"test": "NODE_ENV=test npm run migrate:reset && NODE_ENV=test npm run migrate && NODE_ENV=test ./node_modules/.bin/ts-jest tests",
 		"dev": "tsc-watch --onSuccess \" node build/main/index.js\" ",
 		"build": "run-s clean && tsc -p tsconfig.json",
 		"clean": "trash build",
@@ -53,6 +53,7 @@
 		"npm-run-all": "^4.1.5",
 		"regenerator-runtime": "^0.13.7",
 		"supertest": "^4.0.2",
-		"trash-cli": "^3.1.0"
+		"trash-cli": "^3.1.0",
+		"ts-jest": "^26.4.0"
 	}
 }
