--- a/package.json
+++ b/package.json
@@ -48,8 +48,16 @@
 		"@babel/core": "^7.11.6",
 		"@babel/node": "^7.2.2",
 		"@babel/preset-env": "^7.11.5",
+		"@typescript-eslint/eslint-plugin": "^4.1.1",
+		"@typescript-eslint/parser": "^4.1.1",
 		"babel-core": "^7.0.0-bridge.0",
 		"babel-jest": "^26.3.0",
+		"eslint": "^7.9.0",
+		"eslint-config-standard": "^14.1.1",
+		"eslint-plugin-import": "^2.22.0",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-promise": "^4.2.1",
+		"eslint-plugin-standard": "^4.0.1",
 		"npm-run-all": "^4.1.5",
 		"regenerator-runtime": "^0.13.7",
 		"supertest": "^4.0.2",
