eslint 적용, npm start하면 redis에러

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,10 @@
 {
-	"compilerOptions": {
-		"allowJs": true,
-		"target": "es5",
-		"outDir": "build/main",
-		"esModuleInterop": true
-	},
-	"include": [
-		"**/*.ts"
-	],
-	"exclude": [
-		"node_modules/**"
-	]
+  "compilerOptions": {
+    "allowJs": true,
+    "target": "es5",
+    "outDir": "build/main",
+    "esModuleInterop": true
+  },
+  "include": ["**/*.ts"],
+  "exclude": ["node_modules/**"]
 }
