--- a/package.json
+++ b/package.json
@@ -1,67 +1,68 @@
 {
-	"name": "restapi",
-	"version": "0.0.0",
-	"private": true,
-	"scripts": {
-		"start": "run-s build && node build/main/bin/www",
-		"test": "NODE_ENV=test npm run migrate:reset && NODE_ENV=test npm run migrate && NODE_ENV=test ./node_modules/.bin/ts-jest tests",
-		"dev": "tsc-watch --onSuccess \" node build/main/index.js\" ",
-		"build": "run-s clean && tsc -p tsconfig.json",
-		"clean": "trash build",
-		"migrate": "sequelize db:migrate",
-		"migrate:reset": "sequelize db:migrate:undo:all"
-	},
-	"dependencies": {
-		"@babel/polyfill": "^7.2.5",
-		"@sentry/node": "^5.23.0",
-		"@slack/client": "^5.0.2",
-		"@types/jest": "^26.0.14",
-		"@types/lodash": "^4.14.161",
-		"awesome-typescript-loader": "^5.2.1",
-		"bcrypt": "^5.0.0",
-		"bluebird": "^3.7.2",
-		"cookie-parser": "~1.4.3",
-		"debug": "~2.6.9",
-		"dotenv": "^6.2.0",
-		"express": "~4.16.0",
-		"http-errors": "~1.6.2",
-		"http-status": "^1.4.2",
-		"jest": "^26.4.2",
-		"jsonwebtoken": "^8.5.1",
-		"moment": "^2.27.0",
-		"morgan": "^1.9.1",
-		"mysql2": "^2.1.0",
-		"pg": "^8.3.3",
-		"pg-hstore": "^2.3.3",
-		"random-string": "^0.2.0",
-		"redis": "^3.0.2",
-		"run": "^1.4.0",
-		"sequelize": "^4.44.4",
-		"source-map-loader": "^1.1.0",
-		"trash": "^6.1.1",
-		"typescript": "^4.0.2",
-		"uuid4": "^2.0.2",
-		"winston": "^3.3.3"
-	},
-	"devDependencies": {
-		"@babel/cli": "^7.2.3",
-		"@babel/core": "^7.11.6",
-		"@babel/node": "^7.2.2",
-		"@babel/preset-env": "^7.11.5",
-		"@typescript-eslint/eslint-plugin": "^4.1.1",
-		"@typescript-eslint/parser": "^4.1.1",
-		"babel-core": "^7.0.0-bridge.0",
-		"babel-jest": "^26.3.0",
-		"eslint": "^7.9.0",
-		"eslint-config-standard": "^14.1.1",
-		"eslint-plugin-import": "^2.22.0",
-		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-promise": "^4.2.1",
-		"eslint-plugin-standard": "^4.0.1",
-		"npm-run-all": "^4.1.5",
-		"regenerator-runtime": "^0.13.7",
-		"supertest": "^4.0.2",
-		"trash-cli": "^3.1.0",
-		"ts-jest": "^26.4.0"
-	}
+  "name": "restapi",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "run-s build && node build/main/bin/www",
+    "test": "NODE_ENV=test npm run migrate:reset && NODE_ENV=test npm run migrate && NODE_ENV=test ./node_modules/.bin/ts-jest tests",
+    "dev": "tsc-watch --onSuccess \" node build/main/index.js\" ",
+    "build": "run-s clean && tsc -p tsconfig.json",
+    "clean": "trash build",
+    "migrate": "sequelize db:migrate",
+    "migrate:reset": "sequelize db:migrate:undo:all"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.2.5",
+    "@sentry/node": "^5.23.0",
+    "@slack/client": "^5.0.2",
+    "@types/jest": "^26.0.14",
+    "@types/lodash": "^4.14.161",
+    "awesome-typescript-loader": "^5.2.1",
+    "bcrypt": "^5.0.0",
+    "bluebird": "^3.7.2",
+    "connect-redis": "^5.0.0",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "dotenv": "^6.2.0",
+    "express": "~4.16.0",
+    "http-errors": "~1.6.2",
+    "http-status": "^1.4.2",
+    "jest": "^26.4.2",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.27.0",
+    "morgan": "^1.9.1",
+    "mysql2": "^2.1.0",
+    "pg": "^8.3.3",
+    "pg-hstore": "^2.3.3",
+    "random-string": "^0.2.0",
+    "redis": "^3.0.2",
+    "run": "^1.4.0",
+    "sequelize": "^4.44.4",
+    "source-map-loader": "^1.1.0",
+    "trash": "^6.1.1",
+    "typescript": "^4.0.2",
+    "uuid4": "^2.0.2",
+    "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.11.6",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.11.5",
+    "@typescript-eslint/eslint-plugin": "^4.1.1",
+    "@typescript-eslint/parser": "^4.1.1",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^26.3.0",
+    "eslint": "^7.9.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "npm-run-all": "^4.1.5",
+    "regenerator-runtime": "^0.13.7",
+    "supertest": "^4.0.2",
+    "trash-cli": "^3.1.0",
+    "ts-jest": "^26.4.0"
+  }
 }
