--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sentry/node": "^5.23.0",
     "@slack/client": "^5.0.2",
     "@types/jest": "^26.0.14",
+    "@types/kafka-node": "^3.0.0",
     "@types/lodash": "^4.14.161",
     "awesome-typescript-loader": "^5.2.1",
     "bcrypt": "^5.0.0",
@@ -29,14 +30,19 @@
     "http-status": "^1.4.2",
     "jest": "^26.4.2",
     "jsonwebtoken": "^8.5.1",
+    "kafka": "^0.2.3",
+    "kafka-node": "^5.0.0",
+    "kafkajs": "^1.14.0",
     "moment": "^2.27.0",
     "morgan": "^1.9.1",
     "mysql2": "^2.1.0",
+    "node-schedule": "^1.3.2",
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
     "random-string": "^0.2.0",
     "redis": "^3.0.2",
     "run": "^1.4.0",
+    "run-s": "0.0.0",
     "sequelize": "^4.44.4",
     "source-map-loader": "^1.1.0",
     "trash": "^6.1.1",
