--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "run-s build && node build/main/bin/www",
     "test": "NODE_ENV=test npm run migrate:reset && NODE_ENV=test npm run migrate && NODE_ENV=test ./node_modules/.bin/ts-jest tests",
     "dev": "tsc-watch --onSuccess \" node build/main/index.js\" ",
-    "build": "run-s clean && tsc -p tsconfig.json",
+    "build": "tsc -p tsconfig.json",
     "clean": "trash build",
     "migrate": "sequelize db:migrate",
     "migrate:reset": "sequelize db:migrate:undo:all"
