--- a/config/config.json
+++ b/config/config.json
@@ -4,7 +4,8 @@
     "password": "12341234",
     "database": "test",
     "host": "maindb.cexrfznwa2iv.ap-northeast-2.rds.amazonaws.com",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "operatorsAliases": false
   },
   "test": {
     "username": "recruit",
