--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,38 @@
 {
   "compilerOptions": {
-    "allowJs": true,
-    "target": "es5",
+    "target": "es2020",
     "outDir": "build/main",
-    "esModuleInterop": true
+    "moduleResolution": "node",
+    "module": "commonjs",
+    "declaration": true,
+    "inlineSourceMap": true,
+    "esModuleInterop": true,
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": false,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "traceResolution": false,
+    "listEmittedFiles": false,
+    "listFiles": false,
+    "pretty": true,
+    "lib": [
+      "es2020"
+    ],
+    "types": [
+      "node"
+    ],
+    "typeRoots": [
+      "node_modules/@types",
+      "src/@types"
+    ]
   },
-  "include": ["**/*.ts"],
-  "exclude": ["node_modules/**"]
+  "include": [
+    "**/*.ts"
+  ],
+  "exclude": [
+    "build/**",
+    "node_modules/**"
+  ],
+  "compileOnSave": false
 }
