--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/http-errors": "^1.8.0",
     "@types/kafkajs": "^1.9.0",
     "awesome-typescript-loader": "^5.2.1",
+    "aws-sdk": "^2.865.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^6.2.0",
@@ -27,7 +28,8 @@
     "moment": "^2.27.0",
     "morgan": "^1.9.1",
     "node-schedule": "^1.3.2",
-    "redis": "^3.0.2"
+    "redis": "^3.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^14.11.4",
